visual tweaks expand/collapse bug fixed fixed bug where multiple objects from same predicate would not all show

--- a/browser/web/css/style.css
+++ b/browser/web/css/style.css
@@ -1088,12 +1088,22 @@ div.button:hover{
 	font-size:12px;
 	color:#333;
 	position:relative;
+	padding-top:6px;
+}
+.treeItem .treeItem.expanded:last-child >.treeItemTitleDiv > .treeItemTitle
+{
+	margin-left:-9px;
+	padding-left:9px;
 }
 .treeItem.expanded:last-child >.treeItemTitleDiv > .treeDescriptionDiv
 {
 	margin-left:1px;
 }
 .treeItem.expanded:last-child >.treeItemTitleDiv >.treeDescriptionDiv
+{
+	margin-left:-9px !important;
+}
+.treeItem >.treeItemTitleDiv >.treeDescriptionDiv
 {
 	margin-left:-9px !important;
 }
